# rashisho

./: .gitignore  README.md
rahi-api-main/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  docker_init.py  entry.sh  generate_keys.py  manage.py  pyproject.toml  run_tests.sh  server.py
rahi-api-main/apps/access/: admin.py  apps.py  domain.py  models.py  serializers.py  services.py
rahi-api-main/apps/account/: admin.py  apps.py  managers.py  models.py  reports.py  services.py  signals.py
rahi-api-main/apps/api/: apps.py  authentication.py  middleware.py  pagination.py  permissions.py  roles.py  schema.py  urls.py
rahi-api-main/apps/blog/: models.py
rahi-api-main/apps/comments/: admin.py  apps.py  models.py  services.py  signals.py  utils.py
rahi-api-main/apps/common/: managers.py  models.py  serializers.py
rahi-api-main/apps/community/: admin.py  models.py  reports.py  services.py
rahi-api-main/apps/exam/: admin.py  apps.py  models.py  reports.py  services.py
rahi-api-main/apps/manager/: permissions.py
rahi-api-main/apps/project/: admin.py  apps.py  models.py  reports.py  services.py  signals.py
rahi-api-main/apps/public/: admin.py  models.py
rahi-api-main/apps/resume/: admin.py  apps.py  models.py  reports.py  services.py
rahi-api-main/apps/settings/: admin.py  models.py  services.py
rahi-api-main/conf/: asgi.py  settings.py  urls.py  wsgi.py
rahi-api-main/loaddata/: city.json  field-studies.xlsx  field_study.json  province.json  universities.xlsx  university.json
(+379 files in other folders)
